--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 # theme: jekyll-theme-slate
 url: https://dai-nguyen.com
-compression: true
 assets:
   digest: false
   sources:
@@ -12,4 +11,18 @@ assets:
 include:
     - _assets
     - _projects
-    
+uncss:
+  stylesheets:            # a list of stylesheets to be processed; mandatory
+    - assets/css/main.css
+  files:                  # html files to consider, globs are supported; default: **/*.html
+    - "**/*.html"
+    - "**/*.htm"
+  compress: true          # compress resulting css with sass; default: false
+  ignore:                 # always keep rules for these selectors; default: none
+    - ".is-loading"
+    - "#titleBar"
+  media:                  # additional media queries to consider; default: undefined
+    - print
+  timeout: 30             # how long to wait for the JS to be loaded in milliseconds; default: undefined
+  banner: false           # should the output include a banner comment; default: undefined
+ 
