--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,13 @@ include:
     - _projects
 uncss:
   stylesheets:            # a list of stylesheets to be processed; mandatory
-    - assets/css/main.css
+    - _assets/css
   files:                  # html files to consider, globs are supported; default: **/*.html
     - "**/*.html"
     - "**/*.htm"
-  compress: true          # compress resulting css with sass; default: false
+  compress:               # compress resulting css with sass; default: false
+    css:  sass
+    js:   uglifier
   ignore:                 # always keep rules for these selectors; default: none
     - ".is-loading"
     - "#titleBar"
